Invitar al grupo por mail funcionando. Implementadas las funcionalidades borrar, responder e imprimir al mail. Cambios esteticos Arreglos de bugs en archivos de Avatar.

--- a/EduClass.Web/App_Code/HelperView.cshtml
+++ b/EduClass.Web/App_Code/HelperView.cshtml
@@ -3,7 +3,7 @@
 {
     var texto = System.Text.RegularExpressions.Regex.Replace(contenido, @"<(.|\n)*?>", string.Empty);
     
-    if (contenido.Length > 100)
+    if (texto.Length > 100)
     {
             <p>@texto.Substring(0, 100)</p>
     }
