--- a/EduClass.Web/Views/Menu/_menuTop.cshtml
+++ b/EduClass.Web/Views/Menu/_menuTop.cshtml
@@ -219,10 +219,11 @@
                 </div>
             </li>
             <li>
-                <button id="chatview" class="btn btn-chat alert-notice">
+                <a href="@Url.Action("Index", "Mail")" id="chatview" class="btn btn-chat">
+
                     <span class="badge-alert"></span>
                     <i class="fa fa-comments-o"></i>
-                </button>
+                </a>  
             </li>
         </ul>
 
