--- a/EduClass.Web/Views/Groups/Create.cshtml
+++ b/EduClass.Web/Views/Groups/Create.cshtml
@@ -46,7 +46,7 @@
         }
         </div>
         <div>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Volver", "Index")
         </div>
 </div>
 
