--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -13,9 +13,7 @@
         <h4 class="panel-title text-success">Editar Grupo</h4>
     </div>
     <div class="panel-body">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+       
 
             <div class="form-horizontal">
 
@@ -47,14 +45,18 @@
                 </div>
 
 
-                @if(ViewBag.PersonType is Teacher)
+                @if (ViewBag.PersonType is Teacher)
                 {
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Gurdar" class="btn btn-success" />
-                    </div>
-                </div>
-                }
+                    using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Gurdar" class="btn btn-success" />
+                            </div>
+                        </div>
+                    }
+               }
             </div>
 
 
@@ -65,31 +67,35 @@
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                             <h4 class="modal-title" id="myModalLabel">Invitar Alumnos al Grupo</h4>
                         </div>
+               
+                        @using (Html.BeginForm("InviteStudentByMail", "Groups", FormMethod.Post, htmlAttributes: new { @Id = Model.Id }))
+                        {
+                            @Html.AntiForgeryToken()
                         
-                        
-                        <p class="mb20">Escriba el mail de los alumnos que desee invitar</p>
-                        <select id="select6" class="form-control" style="width: 100%" data-plugin = "select2" data-placeholder="Ingrese los mails" multiple>
+                        <select id="select6" name="select6" class="form-control" style="width: 100%" data-plugin = "select2" data-placeholder="Ingrese los mails" multiple>
                         </select>
-                                
-                            
                         
-
                         <div class="modal-body">
-                            <h4>CLAVE: @Model.Key</h4>
+                            <h2>CLAVE: @Model.Key</h2>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+                            
+                                
+                                <input type="hidden" name="groupId" value="@Model.Id" />
+                                <button type="submit" class="btn btn-primary">Enviar Mail</button>
+                            
                         </div>
+                        }
                     </div><!-- modal-content -->
                 </div><!-- modal-dialog -->
             </div><!-- modal -->
-        }
+        
     </div>
 
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Volver", "Index")
     </div>
     </div>
 @Scripts.Render("~/bundles/jquery")
@@ -111,7 +117,10 @@
 {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-        $("#select6").select2({ tags: true });
+        $("#select6").select2({
+            tags: true,
+            tokenSeparators: [',', ' ', '\t']
+        });
 
         // HTML5 WYSIWYG Editor
         $('#wysiwyg').wysihtml5({
