--- a/EduClass.Web/Views/Groups/JoinStudent.cshtml
+++ b/EduClass.Web/Views/Groups/JoinStudent.cshtml
@@ -36,7 +36,7 @@
         }
         </div>
         <div>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Volver", "Index")
         </div>
 
     </div>
