--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -2,56 +2,13 @@
     <h5 class="sidebar-title">Menu Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
         <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
-        <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mail</span></a></li>
+        <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mensajes</span></a></li>
         <li><a href="@Url.Action("Index", "Groups")"><i class="fa fa-users"></i> <span>Grupos</span></a></li>
         <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
         <li><a href="@Url.Action("GetContacts", "Groups")"><i class="fa fa-book"></i> <span>Contactos</span></a></li>
+        <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
     </ul>
 
-    <h5 class="sidebar-title">Main Menu</h5>
-    <ul class="nav nav-pills nav-stacked nav-quirk">
-        <li class="nav-parent">
-            <a href=""><i class="fa fa-check-square"></i> <span>Forms</span></a>
-            <ul class="children">
-                <li><a href="general-forms.html">Form Elements</a></li>
-                <li><a href="form-validation.html">Form Validation</a></li>
-                <li><a href="form-wizards.html">Form Wizards</a></li>
-                <li><a href="wysiwyg.html">Text Editor</a></li>
-            </ul>
-        </li>
-        <li class="nav-parent">
-            <a href=""><i class="fa fa-suitcase"></i> <span>UI Elements</span></a>
-            <ul class="children">
-                <li><a href="buttons.html">Buttons</a></li>
-                <li><a href="icons.html">Icons</a></li>
-                <li><a href="typography.html">Typography</a></li>
-                <li><a href="alerts.html">Alerts &amp; Notifications</a></li>
-                <li><a href="tabs-accordions.html">Tabs &amp; Accordions</a></li>
-                <li><a href="sliders.html">Sliders</a></li>
-                <li><a href="graphs.html">Graphs &amp; Charts</a></li>
-                <li><a href="panels.html">Panels</a></li>
-                <li><a href="extras.html">Extras</a></li>
-            </ul>
-        </li>
-        <li class="nav-parent">
-            <a href=""><i class="fa fa-th-list"></i> <span>Tables</span></a>
-            <ul class="children">
-                <li><a href="basic-tables.html">Basic Tables</a></li>
-                <li><a href="data-tables.html">Data Tables</a></li>
-            </ul>
-        </li>
-        <li class="nav-parent">
-            <a href=""><i class="fa fa-file-text"></i> <span>Pages</span></a>
-            <ul class="children">
-                <li><a href="asset-manager.html">Asset Manager</a></li>
-                <li><a href="people-directory.html">People Directory</a></li>
-                <li><a href="timeline.html">Timeline</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="blank.html">Blank Page</a></li>
-                <li><a href="notfound.html">404 Page</a></li>
-                <li><a href="signin.html">Sign In</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-            </ul>
-        </li>
-    </ul>
+   
+    
 </div><!-- tab-pane -->
