--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -7,6 +7,7 @@
         <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
         <li><a href="@Url.Action("GetContacts", "Groups")"><i class="fa fa-book"></i> <span>Contactos</span></a></li>
         <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
+        <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-dribbble"></i> <span>Páginas Publicas</span></a></li>
     </ul>
 
    
