--- a/EduClass.Web/Views/Tests/Create.cshtml
+++ b/EduClass.Web/Views/Tests/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Crear Prueba Diagnostica";
 }
 
-<h2>Create</h2>
+
 <div class="panel panel-site-traffic col-md-8 col-md-offset-2">
     <div class="panel-heading">
         <ul class="panel-options">
@@ -61,6 +61,6 @@
         }
         </div>
         <div>
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Volver", "Index")
         </div>
     </div>
