--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -9,13 +9,20 @@
         <ul class="panel-options">
             <li><button type="button" class="btn btn-sm btn-quirk" data-toggle="modal" data-target="#myModal">Invitar Alumno</button></li>
             
+            
         </ul>
+       
         <h4 class="panel-title text-success">Editar Grupo</h4>
     </div>
     <div class="panel-body">
        
 
             <div class="form-horizontal">
+            @if (ViewBag.PersonType is Teacher)
+            {
+                using (Html.BeginForm())
+                {
+                @Html.AntiForgeryToken()
 
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.Id)
@@ -43,16 +50,9 @@
                         @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-
-                @if (ViewBag.PersonType is Teacher)
-                {
-                    using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Gurdar" class="btn btn-success" />
+                                <input type="submit" value="Guardar" class="btn btn-success" />
                             </div>
                         </div>
                     }
@@ -79,7 +79,7 @@
                             <h2>CLAVE: @Model.Key</h2>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                             
                                 
                                 <input type="hidden" name="groupId" value="@Model.Id" />
