--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="tab-pane active" id="mainmenu">
+﻿
+<div class="tab-pane active" id="mainmenu">
     <h5 class="sidebar-title">Menu Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
         <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
@@ -7,7 +8,8 @@
         <li><a href="@Url.Action("Index", "FilesLibrary")"><i class="fa fa-folder"></i> <span>Mis Archivos</span></a></li>
         <li><a href="@Url.Action("GetContacts", "Groups")"><i class="fa fa-book"></i> <span>Contactos</span></a></li>
         <li><a href="@Url.Action("Index", "Events")"><i class="fa fa-calendar"></i> <span>Eventos</span></a></li>
-        <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-dribbble"></i> <span>Páginas Publicas</span></a></li>
+        <li><a href="@Url.Action("Index", "Pages")"><i class="fa fa-weibo"></i> <span>Páginas Publicas</span></a></li>
+        <li><a href="@Url.Action("Index", "Tests")"><i class="fa fa-paperclip"></i> <span>Pruebas Diagnosticas</span></a></li>
     </ul>
 
    
