--- a/EduClass.Web/Views/Pages/Edit.cshtml
+++ b/EduClass.Web/Views/Pages/Edit.cshtml
@@ -1,33 +1,37 @@
 ﻿@model EduClass.Web.Infrastructure.ViewModels.PageViewModel
 
 @{
-    ViewBag.Title = "Crear Página Pública";
+    ViewBag.Title = "Edit";
 }
 
 <div class="panel panel-site-traffic col-md-8 col-md-offset-2">
     <div class="panel-heading">
         <ul class="panel-options">
-            <li><a><i class="fa fa-refresh"></i></a></li>
-        </ul>
-        <h4 class="panel-title text-success">Crea una página publica para todos los usuarios del Grupo</h4>
 
+        </ul>
+
+        <h4 class="panel-title text-success">Editar Página Publica</h4>
     </div>
     <div class="panel-body">
+
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.Id)
+
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(model => model.Name, htmlAttributes: new { @class = "form-control" })
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
-              
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -39,15 +43,11 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-default" />
+                        <input type="submit" value="Guardar" class="btn btn-default" />
                     </div>
                 </div>
             </div>
         }
-    </div>
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
     </div>
 </div>
 
@@ -56,14 +56,13 @@
 
 <script src="~/Scripts/app/helpersSite.js"></script>
 <script>
-        $(document).ready(function () {
+    $(document).ready(function () {
 
-            var message = "@Html.Raw(sessionMessage.ToString())";
-            if (message != "")
-            {
-                showMessageJS(message);
-            }
-        });
+        var message = "@Html.Raw(sessionMessage.ToString())";
+        if (message != "") {
+            showMessageJS(message);
+        }
+    });
 </script>
 
 @section scripts
@@ -71,12 +70,12 @@
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
 
-            // HTML5 WYSIWYG Editor
-            $('#wysiwyg').wysihtml5({
-                toolbar: {
-                    fa: true
-                }
-            });
+        // HTML5 WYSIWYG Editor
+        $('#wysiwyg').wysihtml5({
+            toolbar: {
+                fa: true
+            }
+        });
 
     </script>
 
