--- a/EduClass.Web/Views/Menu/_menuVertical.cshtml
+++ b/EduClass.Web/Views/Menu/_menuVertical.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="tab-pane active" id="mainmenu">
-    <h5 class="sidebar-title">Menu Principal</h5>
+    <h5 class="sidebar-title">Menú Principal</h5>
     <ul class="nav nav-pills nav-stacked nav-quirk">
         <li class="active"><a href="@Url.Action("Index", "Board")"><i class="fa fa-home"></i> <span>Dashboard</span></a></li>
         <li><a href="@Url.Action("Index", "Mail")"><i class="fa fa-inbox"></i> <span>Mensajes</span></a></li>
