--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EduClass.Web.Infrastructure.ViewModels.GroupViewModel
 @using EduClass.Entities
 @{
-    ViewBag.Title = "Editar";
+    ViewBag.Title = "Editar Grupo";
 }
 
 <div class="panel panel-site-traffic col-md-8 col-md-offset-2">
