--- a/EduClass.Web/Views/Users/Edit.cshtml
+++ b/EduClass.Web/Views/Users/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model EduClass.Web.Infrastructure.ViewModels.PersonViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Usuario";
 }
 
 
@@ -9,8 +9,8 @@
     <div class="panel-heading">
         
         <ul class="panel-options">
-            <li><a href="@Url.Action("ChangeAvatar", "Users")" class="btn btn-sm btn-danger pull-right">Cambiar Foto</a></li>
-            <li><a href="@Url.Action("ChangePassword", "Users")" class="btn btn-sm btn-info pull-right">Cambiar Contraseña</a></li>
+            <li><a href="@Url.Action("ChangeAvatar", "Users")" class="btn-quirk pull-right">Cambiar Foto</a></li>
+            <li><a href="@Url.Action("ChangePassword", "Users")" class="btn-quirk pull-right">Cambiar Contraseña</a></li>
 
         </ul>
         <h4 class="panel-title text-success">Editar Usuario</h4>
@@ -23,7 +23,15 @@
 
             <div class="form-horizontal">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                
+                @Html.HiddenFor(model => model.Id)
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control", @readonly="" } })
+                        @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -43,7 +51,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Birthday, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10 input-group">
-                        @Html.Editor("sdfsdf",  new { htmlAttributes = new { @class = "form-control", @placeholder = "dd/mm/yyyy", @id = "datepicker" } })
+                        @Html.EditorFor(model => model.Birthday,  new { htmlAttributes = new { @class = "form-control", @type="text", @placeholder = "dd/mm/yyyy", @id = "datepicker" } })
                         <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                         @Html.ValidationMessageFor(model => model.Birthday, "", new { @class = "text-danger" })
                         
@@ -90,6 +98,8 @@
                 monthNamesShort: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
                 dayNamesMin: ["D", "L", "M", "M", "J", "V", "S"]
             });
+            $("#datepicker").datepicker("setDate", $("#datepicker").val);
+            
             $('#datepicker-inline').datepicker();
             $('#datepicker-multiple').datepicker({ numberOfMonths: 2 });
             
